# dotdesk

./: CHANGELOG.md  README.md  index.html  package-lock.json  package.json
.cursor/plans/: dot_style_panel_plan_69a2f6b6.plan.md
.github/skills/dotdesk-dev/: SKILL.md
docs/: SESSION_LOG.md  architecture.md  framework-plan.md  interactive-canvas.md  latex-pipeline.md  plan.md
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: env_debug.rs  graphviz.rs  latex.rs  lib.rs  main.rs  menu.rs
src/components/: DotEditor.tsx  DotStylePanel.tsx  MindMap.tsx  MindMapNodeView.tsx  RenderLog.tsx  SvgPreview.tsx  layout.ts
