[package]
name = "dotdesk"
version = "0.1.0"
description = "A cross-platform Graphviz DOT desktop editor."
authors = ["dotdesk"]
edition = "2021"

[lib]
name = "dotdesk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
